# cpp-nng

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  DataParser.cpp  DataParser.h  FileReader.cpp  FileReader.h  README.md  main.cpp
input_output/: Logger.cpp  Logger.h
input_processing/: DataStreetInfoMapper.cpp  DataStreetInfoMapper.h  FileReader.cpp  FileReader.h
logic/: DuplicateFinder.cpp  DuplicateFinder.h
model/: NumberInfo.cpp  NumberInfo.h  StreetIdentifier.cpp  StreetIdentifier.h
output_handling/: Logger.cpp  Logger.h
